<resources>
    <string name="app_name">Helping Hands</string>
    <string name="version">helping hands (v_1.1)</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_requests">Requests</string>
    <string name="title_profile">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fetching_data_from_database">Fetching data from the database…</string>
    <string name="incoming_request">Incoming Request</string>
    <string name="someone_within_your_area_needs_your_help">Someone within your area needs your help</string>
    <string name="help_is_coming">Help is coming</string>
...
    <string name="Change_Forgot_password">Change/Forgot password</string>
    <string name="Account_deleted_permanently">Account will be deleted permanently</string>
    <string name="Session_destroyed">Session will be destroyed</string>
    <string name="Creators_info_and_Help">Creators info and Help</string>
    <string name="Change_Account_Password">Change Account Password</string>
    <string name="cancel">cancel</string>
    <string name="Change_password">Change password</string>
    <string name="This_will_delete_your_account">This will delete your account along with all your data. This can\'t be undone</string>
    <string name="Deactivate_my_Account">Deactivate my Account</string>
    <string name="Logout">Logout</string>
    <string name="Are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="got_it">got it</string>
    <string name="Deleting_Account_Data">Deleting Account Data…</string>
...
