...
    <item
        android:id="@+id/requestsFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_requests" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_settings_24px"
        android:title="@string/title_profile" />
</menu>
